# zephyr-to-squash-migration

./: .env.example  .gitattributes  .gitignore  README.md  SIGNING.md  Spustit_Migraci.bat  Spustit_Migraci.command  ZephyrToSquash.spec  api_clients.py  config.py  convert.py  gui.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml
